add styling to current tab

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,20 +34,9 @@ input {
   margin: 15px;
 }
 
-<<<<<<< HEAD
-#customerUi {
-  display: none;
-=======
-card {
-  margin: 18rem;
-}
-
-/* .card-text {
-  display: none; */
-}
-
-carousel {
-  height: 500px;
-  border: black;
->>>>>>> 1dd30972a4ddafe723da8056019cef47568c533c
-}
+/* .tabLineItem {
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: lightgrey;
+} */
