--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #FFE;
+}
+
 #companySide {
   display: none;
 }
@@ -40,3 +44,7 @@ input {
   padding: 5px;
   background-color: lightgrey;
 } */
+
+.removeButton {
+  font-size: 12px;
+}
