add shadow box and fix drink description font weight

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,11 +89,13 @@ video {
 
 .drinkCard div div p {
   display: none;
+  font-weight: normal;
 }
 
 .drinkCard {
   margin: 10px;
   border: none;
+  box-shadow: 10px 10px 5px grey;
 }
 
 .overlayColor {
