--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,7 @@ body {
   text-align: center;
 }
 
-.jumbotron {
-   text-align: center;
-}
+
 
 .center {
   text-align: center;
@@ -97,7 +95,7 @@ video {
   margin: 0 auto 45px;
 }
 .video-wrapper h3 {
-  color: black;
+  color: #fff;
   position: absolute;
   top: 42%;
   font-size: 60px;
@@ -105,6 +103,16 @@ video {
   left: 0;
   right: 0;
 }
+
+#logo {
+  position: absolute;
+  top: 10%;
+  text-align: center;
+  left: 0;
+  right: 0;
+  height: 150px;
+}
+
 
 .drinkCard div div p {
   display: none;
