add login authentication if the end user selects they are a bartender

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,11 @@ body {
   font-size: .5em;
 }
 
+#authenticate {
+  display: none;
+  text-align: center;
+}
+
 .center {
   text-align: center;
 }
