darken the images for the company and customer picture

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,29 @@ input {
 //                      //
 ////////////////////////// */
 
+#companyPic{
+   -webkit-filter: brightness(100%);
+}
+#companyPic:hover {
+    -webkit-filter: brightness(50%);
+    -webkit-transition: all 0s ease;
+    -moz-transition: all 0s ease;
+    -o-transition: all 0s ease;
+    -ms-transition: all 0s ease;
+    transition: all 0s ease;
+}
+#customerPic{
+   -webkit-filter: brightness(100%);
+}
+#customerPic:hover {
+    -webkit-filter: brightness(50%);
+    -webkit-transition: all 0s ease;
+    -moz-transition: all 0s ease;
+    -o-transition: all 0s ease;
+    -ms-transition: all 0s ease;
+    transition: all 0s ease;
+}
+
 
 .img-responsive {
   display: block;
