remove customer and company buttons and link pictures to the appropriate divs

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,23 +64,26 @@ input {
    -webkit-filter: brightness(100%);
 }
 #companyPic:hover {
+    cursor: pointer;
     -webkit-filter: brightness(50%);
-    -webkit-transition: all 0s ease;
-    -moz-transition: all 0s ease;
-    -o-transition: all 0s ease;
-    -ms-transition: all 0s ease;
-    transition: all 0s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 #customerPic{
    -webkit-filter: brightness(100%);
 }
 #customerPic:hover {
+  cursor: pointer;
+
     -webkit-filter: brightness(50%);
-    -webkit-transition: all 0s ease;
-    -moz-transition: all 0s ease;
-    -o-transition: all 0s ease;
-    -ms-transition: all 0s ease;
-    transition: all 0s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 
