--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,9 @@ input {
 //                      //
 ////////////////////////// */
 
+
 #companyPic{
+    border-radius: 15px;
    -webkit-filter: brightness(100%);
 }
 #companyPic:hover {
@@ -73,6 +75,7 @@ input {
     transition: all 0.5s ease;
 }
 #customerPic{
+    border-radius: 15px;
    -webkit-filter: brightness(100%);
 }
 #customerPic:hover {
