--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,19 @@ input {
 //                      //
 ////////////////////////// */
 
+.fixed-nav-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 50px;
+  background-color: #EEEEEE;
+}
+
+
+
 #companyPic{
    -webkit-filter: brightness(100%);
 }
@@ -178,7 +191,7 @@ input[type='checkbox'] {
    width: auto;
    height: auto;
    z-index: 100;
-   bottom: 0px;
+   bottom: 46px;
    right: 0px;
    opacity: .9;
    overflow: scroll;
@@ -187,16 +200,18 @@ input[type='checkbox'] {
 #startOrder {
   display: none;
   position: fixed;
-  bottom: 50px;
+  bottom: 5px;
   right: 100px;
   z-index: 99;
-  padding: 8px;
+  padding: 3px;
   font-size: 20px;
   background: #FFF;
   border-radius: 5px;
   text-transform: uppercase;
   line-height: 14px;
   cursor: pointer;
+  width: 100px;
+  height: 32px;
 }
 
 
