--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,9 @@ button {
   margin: 5px;
 }
 
+#orderButtons {
+  text-align: center;
+}
 
 .lineItem {
   border: 1px solid lightgrey;
@@ -57,6 +60,51 @@ input {
 //        Chris         //
 //                      //
 ////////////////////////// */
+
+.head {
+
+  border-radius: 10px;
+  background-color: black;
+  -webkit-filter: opacity(50%);
+}
+#openQ {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 72px;
+
+  font-style: italic;
+  font-weight: bold;
+  color: white;
+  -webkit-filter: opacity(75%);
+}
+
+#explanation {
+  align: center;
+  border-radius: 10px;
+  background-color: black;
+  -webkit-filter: opacity(50%);
+}
+
+#form1 {
+  background-color: rgba(135, 130, 130, 0.25);
+  padding: 10px;
+  border: solid;
+  border-radius: 15px;
+  height: 650px;
+  overflow: scroll;
+}
+
+#form1::-webkit-scrollbar {
+  width: 1em;
+}
+#form1::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.0);
+}
+
+
+p {
+  font-family: 'Ropa Sans', sans-serif;
+  color: lightgrey;
+}
 
 #body {
   background: url(../images/wood.jpg) no-repeat center
@@ -185,13 +233,13 @@ input[type='checkbox'] {
 .drinkCard {
   margin: 10px;
   border: none;
-  box-shadow: 10px 10px 5px grey;
+  box-shadow: 5px 5px 10px black;
 }
 
 .overlayColor {
   background: rgba(75,200,75,0.52);
   z-index: 2;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #useless {
@@ -209,7 +257,6 @@ input[type='checkbox'] {
    bottom: 45px;
    right: 0px;
    opacity: .9;
-   overflow: scroll;
    border: none;
 }
 .sideNavCard {
