--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
 #authenticate {
   display: none;
   text-align: center;
+  color: grey;
 }
 
 .center {
@@ -60,7 +61,10 @@ input {
 //        Chris         //
 //                      //
 ////////////////////////// */
+
+
 .body {
+  font-size: 18px;
   padding: 15px;
   border-radius: 10px;
   background-color: black;
@@ -68,6 +72,7 @@ input {
 }
 
 .head {
+  font-size: 20;
   border-radius: 10px;
   background-color: black;
   -webkit-filter: opacity(50%);
@@ -82,6 +87,7 @@ input {
 }
 
 #explanation {
+  font-size: 24px;
   align: center;
   border-radius: 10px;
   background-color: black;
@@ -135,6 +141,7 @@ p, h3 {
 
 
 #companyPic{
+  box-shadow: 8px 8px 10px black;
     border-radius: 15px;
    -webkit-filter: brightness(100%);
 }
@@ -148,6 +155,7 @@ p, h3 {
     transition: all 0.5s ease;
 }
 #customerPic{
+    box-shadow: 8px 8px 10px black;
     border-radius: 15px;
    -webkit-filter: brightness(100%);
 }
@@ -179,6 +187,8 @@ video {
   object-fit: contain;
 }
 .video-wrapper video {
+  border-radius: 8px;
+  box-shadow: 80px 80px 150px black;
   width: 100%;
   z-index: -100;
   background: no-repeat;
